Layout and styling with help borders

--- a/index.html
+++ b/index.html
@@ -12,15 +12,36 @@
 
   <body>
     <aside>
-      <logo-container> <logo>logo</logo> </logo-container
-      ><photo-credit>photo credit</photo-credit>
+      <logo-container>
+        <logo><img src="img/odin-lined.png">ODIN</logo></logo-container
+      ><photo-credit
+        >Photo by
+        <a
+          href="https://unsplash.com/@aleksdahlberg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+          >Aleks Dahlberg</a
+        >
+        on
+        <a
+          href="https://unsplash.com/photos/vtvWX8YgMdM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+          >Unsplash</a
+        >
+      </photo-credit>
     </aside>
     <main>
-      <hero><inner-column>Hero</inner-column></hero>
+      <hero
+        ><inner-column>
+          <form-heading
+            >This is a sign-up form for an incredible coding course and
+            community. And the best thing? It's free!<br>
+            Just give us some details below to become part of something
+            amazing.</form-heading
+          >
+        </inner-column></hero
+      >
       <form>
         <form-upper>
           <inner-column>
-            <form-heading>Let's do this</form-heading>
+            <form-heading>Let's do this!</form-heading>
             <form-fields>
               <row>
                 <item>
